--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="resume">
             <div class="container">
                 <div class="resume__block">
-                    <h1 class="contact-info__header">Bulka</h1>
-                    <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
+                    <h1 class="contact-info__header">Dmytro Voronkov</h1>
+                    <h3 class="contact-info__sub-header">Front-End Developer</h3>
 
                     <div class="contact_info_container fh">
                         <div class="contact-info__block">
@@ -27,7 +27,7 @@
                                             d="M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H64C28.7 64 0 92.7 0 128v16 48V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192 144 128c0-35.3-28.7-64-64-64H344V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H152V24zM48 192H400V448c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V192z" />
                                     </svg>
                                 </div>
-                                <span>I'm older than you</span>
+                                <span>21/07/2003</span>
                             </a>
                             <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author"
                                 class="contact-info__item">
@@ -38,24 +38,23 @@
                                             d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
                                     </svg>
                                 </div>
-                                <span>Lviv, Ukraine</span>
+                                <span>Obukhiv, Ukraine</span>
                             </a>
                             <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author"
                                 class="contact-info__item">
                                 <div class="contact-info__item-icon-wrapper">
-                                    <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg"
-                                        viewBox="0 0 448 512">
+                                    <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" height="1em"
+                                        viewBox="0 0 496 512">
                                         <path
-                                            d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z">
-                                        </path>
+                                            d="M248,8C111.033,8,0,119.033,0,256S111.033,504,248,504,496,392.967,496,256,384.967,8,248,8ZM362.952,176.66c-3.732,39.215-19.881,134.378-28.1,178.3-3.476,18.584-10.322,24.816-16.948,25.425-14.4,1.326-25.338-9.517-39.287-18.661-21.827-14.308-34.158-23.215-55.346-37.177-24.485-16.135-8.612-25,5.342-39.5,3.652-3.793,67.107-61.51,68.335-66.746.153-.655.3-3.1-1.154-4.384s-3.59-.849-5.135-.5q-3.283.746-104.608,69.142-14.845,10.194-26.894,9.934c-8.855-.191-25.888-5.006-38.551-9.123-15.531-5.048-27.875-7.717-26.8-16.291q.84-6.7,18.45-13.7,108.446-47.248,144.628-62.3c68.872-28.647,83.183-33.623,92.511-33.789,2.052-.034,6.639.474,9.61,2.885a10.452,10.452,0,0,1,3.53,6.716A43.765,43.765,0,0,1,362.952,176.66Z" />
                                     </svg>
                                 </div>
-                                <span>binary-studio</span>
+                                <span>truehollow</span>
                             </a>
                         </div>
 
                         <div class="contact-info__block contact-info__block--center">
-                            <img class="contact-info__avatar" src="assets/avatar.png" alt="Avatar">
+                            <img class="contact-info__avatar" src="assets/my-avatar.jpg" alt="Avatar">
                         </div>
 
                         <div class="contact-info__block">
@@ -67,7 +66,7 @@
                                             d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z" />
                                     </svg>
                                 </div>
-                                <span>+380 32 231 6454</span>
+                                <span>+380 676 81 8888</span>
                             </a>
                             <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author"
                                 class="contact-info__item">
@@ -78,7 +77,7 @@
                                             d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128z" />
                                     </svg>
                                 </div>
-                                <span>ask@binary-studio.com</span>
+                                <span>dmvr2107@gmail.com</span>
                             </a>
                             <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author"
                                 class="contact-info__item">
@@ -89,87 +88,87 @@
                                             d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" />
                                     </svg>
                                 </div>
-                                <span>binarystudiocat</span>
+                                <span>truehollow</span>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="container">
-                    <div class="resume__block">
-                        <div class="intro">
-                            <div class="intro__icon-wrapper">
-                                <svg class="intro__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                                    <path
-                                        d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z">
-                                    </path>
-                                </svg>
-                            </div>
-                            <p class="intro_text">Meow.
-                                I am a Binary Studio cat. Still got 7 lives. Work in IT, Full Stack Evil,
-                                all I do is sleep and try to help out hoomans with their projects whenever
-                                they need me.
-                            </p>
+            </div>
+            <div class="container">
+                <div class="resume__block">
+                    <div class="intro">
+                        <div class="intro__icon-wrapper">
+                            <svg class="intro__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                <path
+                                    d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z">
+                                </path>
+                            </svg>
                         </div>
+                        <p class="intro_text">Meow.
+                            I am a Binary Studio cat. Still got 7 lives. Work in IT, Full Stack Evil,
+                            all I do is sleep and try to help out hoomans with their projects whenever
+                            they need me.
+                        </p>
                     </div>
                 </div>
-                <div class="container">
-                    <div class="resume__block">
-                        <div class="skills">
-                            <h3 class="skills__header">Skills</h3>
-                            <p class="skills__text">Sleep, eat, more sleep, meow, mrrr, purr. </p>
-                        </div>
+            </div>
+            <div class="container">
+                <div class="resume__block">
+                    <div class="skills">
+                        <h3 class="skills__header">Skills</h3>
+                        <p class="skills__text">Sleep, eat, more sleep, meow, mrrr, purr. </p>
                     </div>
                 </div>
-                <div class="container">
-                    <div class="resume__block">
-                        <div class="main-info fh">
+            </div>
+            <div class="container">
+                <div class="resume__block">
+                    <div class="main-info fh">
 
-                            <div class="experiences">
-                                <h3 class="experiences__header">Experience</h3>
-                                <div class="experiences__company">
-                                    <div class="experiences__company-header">
-                                        <span class="experiences__company-header-durability">For whole my life</span>
-                                        <h3 class="experiences__company-header-name">BinaryStudio</h3>
-                                    </div>
+                        <div class="experiences">
+                            <h3 class="experiences__header">Experience</h3>
+                            <div class="experiences__company">
+                                <div class="experiences__company-header">
+                                    <span class="experiences__company-header-durability">For whole my life</span>
+                                    <h3 class="experiences__company-header-name">BinaryStudio</h3>
+                                </div>
 
-                                    <div class="experiences__company-project">
-                                        <span class="experiences__company-project-role">Binary Studio Cat</span>
-                                        <h3 class="experiences__company-project-name">Hooman project</h3>
-                                        <ul class="experiences__company-project-responsibilities">
-                                            <li>Supported hoomans</li>
-                                            <li>Slept all the time</li>
-                                            <li>Lied on the keyboard</li>
-                                            <li>Watched my hoomans working</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="additional-info fv">
-                                <div class="additional-info__education">
-                                    <h3 class="additional-info__education-header">Education</h3>
-                                    <div class="additional-info__education-university">
-                                        <span class="additional-info__education-university-durability">2021</span>
-                                        <h3 class="additional-info__education-university-speciality">Cat track</h3>
-                                        <p class="additional-info__education-university-name">Binary Studio Academy</p>
-                                    </div>
-                                </div>
-    
-                                <div class="additional-info__languages">
-                                    <h3 class="additional-info__languages-header">Languages</h3>
-                                    <p class="additional-info__languages-item">
-                                        Meow dialect
-                                    </p>
-                                    <p class="additional-info__languages-item">
-                                        Ukrainian (understand)
-                                    </p>
-                                    <p class="additional-info__languages-item">
-                                        English (don't understand)
-                                    </p>
+                                <div class="experiences__company-project">
+                                    <span class="experiences__company-project-role">Binary Studio Cat</span>
+                                    <h3 class="experiences__company-project-name">Hooman project</h3>
+                                    <ul class="experiences__company-project-responsibilities">
+                                        <li>Supported hoomans</li>
+                                        <li>Slept all the time</li>
+                                        <li>Lied on the keyboard</li>
+                                        <li>Watched my hoomans working</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
+                        <div class="additional-info fv">
+                            <div class="additional-info__education">
+                                <h3 class="additional-info__education-header">Education</h3>
+                                <div class="additional-info__education-university">
+                                    <span class="additional-info__education-university-durability">2021</span>
+                                    <h3 class="additional-info__education-university-speciality">Cat track</h3>
+                                    <p class="additional-info__education-university-name">Binary Studio Academy</p>
+                                </div>
+                            </div>
 
+                            <div class="additional-info__languages">
+                                <h3 class="additional-info__languages-header">Languages</h3>
+                                <p class="additional-info__languages-item">
+                                    Meow dialect
+                                </p>
+                                <p class="additional-info__languages-item">
+                                    Ukrainian (understand)
+                                </p>
+                                <p class="additional-info__languages-item">
+                                    English (don't understand)
+                                </p>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
         </div>
