--- a/index.html
+++ b/index.html
@@ -104,10 +104,9 @@
                                 </path>
                             </svg>
                         </div>
-                        <p class="intro_text">Meow.
-                            I am a Binary Studio cat. Still got 7 lives. Work in IT, Full Stack Evil,
-                            all I do is sleep and try to help out hoomans with their projects whenever
-                            they need me.
+                        <p class="intro_text">
+                            Hi, I am a Front-End developer from Obukhiv. I like writing 🌈JavaScript🌈 code, 📕reading
+                            books📕 and 🎸playing guitar🎸.
                         </p>
                     </div>
                 </div>
