--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="resume__block">
                     <div class="skills">
                         <h3 class="skills__header">Skills</h3>
-                        <p class="skills__text">Sleep, eat, more sleep, meow, mrrr, purr. </p>
+                        <p class="skills__text">HTML, CSS, JavaScript, React, Redux.</p>
                     </div>
                 </div>
             </div>
