--- a/index.html
+++ b/index.html
@@ -126,19 +126,14 @@
                         <div class="experiences">
                             <h3 class="experiences__header">Experience</h3>
                             <div class="experiences__company">
-                                <div class="experiences__company-header">
-                                    <span class="experiences__company-header-durability">For whole my life</span>
-                                    <h3 class="experiences__company-header-name">BinaryStudio</h3>
-                                </div>
 
                                 <div class="experiences__company-project">
-                                    <span class="experiences__company-project-role">Binary Studio Cat</span>
-                                    <h3 class="experiences__company-project-name">Hooman project</h3>
+                                    <span class="experiences__company-project-role">Front-End developer</span>
+                                    <h3 class="experiences__company-project-name">My pet-project site</h3>
                                     <ul class="experiences__company-project-responsibilities">
-                                        <li>Supported hoomans</li>
-                                        <li>Slept all the time</li>
-                                        <li>Lied on the keyboard</li>
-                                        <li>Watched my hoomans working</li>
+                                        <li>Writing logic using JavaScript and React</li>
+                                        <li>Creating CSS styles</li>
+                                        <li>Fetching data from API</li>
                                     </ul>
                                 </div>
                             </div>
@@ -147,30 +142,28 @@
                             <div class="additional-info__education">
                                 <h3 class="additional-info__education-header">Education</h3>
                                 <div class="additional-info__education-university">
-                                    <span class="additional-info__education-university-durability">2021</span>
-                                    <h3 class="additional-info__education-university-speciality">Cat track</h3>
-                                    <p class="additional-info__education-university-name">Binary Studio Academy</p>
+                                    <span class="additional-info__education-university-durability">2020</span>
+                                    <h3 class="additional-info__education-university-speciality">Computer
+                                        engineering</h3>
+                                    <p class="additional-info__education-university-name">National Aviation
+                                        University</p>
                                 </div>
                             </div>
 
                             <div class="additional-info__languages">
                                 <h3 class="additional-info__languages-header">Languages</h3>
                                 <p class="additional-info__languages-item">
-                                    Meow dialect
+                                    Ukrainian (fluent)
                                 </p>
                                 <p class="additional-info__languages-item">
-                                    Ukrainian (understand)
-                                </p>
-                                <p class="additional-info__languages-item">
-                                    English (don't understand)
+                                    English (intermidiate)
                                 </p>
                             </div>
                         </div>
-                    </div>
 
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
     </main>
 </body>
